--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <header>
-    <img class="banner" src="/img/oracle.png" alt="oracle">
+    <img class="banner" src="./img/oracle.png" alt="oracle">
     <hr>
 </header>
 <body>
